# robot_ws_py_framework

./: .gitignore  AGENT.md  AGENTS.md  Gemini_SDK_example.py  LICENSE  LOGOS_FRAMEWORK.md  LOGOS_ROS_ARCHITECTURE.md  README.md  SCRATCHPAD.txt  TINY_ARM_DEPLOYMENT.md  TINY_FACE_DEPLOYMENT.md  constitution.txt  log.txt  logos_context.txt  prj.txt  prj2.txt  project.txt  report.md  temp copy.txt  temp.txt
animations/arms/: emoji_arm_seq_1st_place_medal_.json  emoji_arm_seq_20241006-201307.json  emoji_arm_seq_20241006-214857.json  emoji_arm_seq_20241006-225925.json  emoji_arm_seq_20241006-232128.json  emoji_arm_seq_20241007-130609.json  emoji_arm_seq_20241007-132351.json  emoji_arm_seq_20241007-142811.json  emoji_arm_seq_20241007-171409.json  emoji_arm_seq_20241007-174515.json  emoji_arm_seq_20260507-222231.json  emoji_arm_seq_2nd_place_medal_.json  emoji_arm_seq_3rd_place_medal_.json  emoji_arm_seq_AB_button__blood_type__.json  emoji_arm_seq_ATM_sign_.json  emoji_arm_seq_A_button__blood_type__.json  emoji_arm_seq_BACK_arrow_.json  emoji_arm_seq_B_button__blood_type__.json  emoji_arm_seq_CL_button_.json  emoji_arm_seq_COOL_button_.json  emoji_arm_seq_Cancer_.json  emoji_arm_seq_Christmas_tree_.json  emoji_arm_seq_END_arrow_.json  emoji_arm_seq_FREE_button_.json  emoji_arm_seq_Gemini_.json  emoji_arm_seq_ID_button_.json  emoji_arm_seq_Japanese_acceptable_button_.json  emoji_arm_seq_Japanese_application_button_.json  emoji_arm_seq_Japanese_bargain_button_.json  emoji_arm_seq_Japanese_castle_.json  emoji_arm_seq_Japanese_congratulations_button_.json  emoji_arm_seq_Japanese_discount_button_.json  emoji_arm_seq_Japanese_dolls_.json  emoji_arm_seq_Japanese_free_of_charge_button_.json  emoji_arm_seq_Japanese_here_button_.json  emoji_arm_seq_Japanese_monthly_amount_button_.json  emoji_arm_seq_Japanese_no_vacancy_button_.json  emoji_arm_seq_Japanese_not_free_of_charge_button_.json  emoji_arm_seq_Japanese_open_for_business_button_.json  emoji_arm_seq_Japanese_passing_grade_button_.json  (+1470 more)
animations/arms_semantic/: emoji_arm_seq_abacus.json  emoji_arm_seq_accordion.json  emoji_arm_seq_adhesive_bandage.json  emoji_arm_seq_admission_tickets_variation_selector_16.json  emoji_arm_seq_adult_zero_width_joiner_adult_zero_width_joiner_child.json  emoji_arm_seq_adult_zero_width_joiner_adult_zero_width_joiner_child_zero_width_joiner_child.json  emoji_arm_seq_adult_zero_width_joiner_airplane_variation_selector_16.json  emoji_arm_seq_adult_zero_width_joiner_artist_palette.json  emoji_arm_seq_aerial_tramway.json  (+1478 more)
config/: ambient_sound_blocklist.txt  nemotron_custom_vocabulary.json  ollama_servers.json
docs/: LOGOS_CODEX_BRIDGE.md  LOGOS_FRAMEWORK.md  LOGOS_MICROPHONE_SETUP.md  LOGOS_ROS_ARCHITECTURE.md  LOGOS_RTABMAP.md  LOGOS_STARTUP_AND_BASIC_USAGE.html  LOGOS_STARTUP_AND_BASIC_USAGE.md  PICO_HUB75_FACE.md  README.md  SKILLS.md  TTP_V2.md  TTP_V3.md  TTP_V3_PLAN.md  nemotron_asr_poc_notes.md  quick_start.md
src/: lf.txt  log.txt
src/logos_face/: CMakeLists.txt  package.xml
src/logos_face/cfg/: FaceNodeConfig.cfg  FaceNodeConfig_best_so_far.cfg
src/logos_face/scripts/: face_phosphor_README.md  face_phosphor_node.py  pico_face_bridge.py
src/logos_face/src/: README.md  face_hud.cpp  face_hud_README.md  face_hud_node.cpp  face_node copy 2.cpp  face_node copy.cpp  face_node.cpp  face_node_best_so_far.cpp  face_node_mouth_trails.cpp  face_node_text_backdrop.cpp  face_node_with_mouth_trails.cpp  handoff.md
src/logos_framework/: CMakeLists.txt  package.xml  setup.py
src/logos_framework/launch/: start_framework.launch
src/logos_framework/modules/: context_manager.py
src/logos_framework/msg/: CognitionInput.msg  CognitionOutput.msg
src/logos_framework/scripts/: cognition_node copy.py  cognition_node.py  cognition_node_one_file_old.py.bak  cognition_node_preui.py  python_worker_node.py  urwid_tui.py  web_ui_node.py
src/logos_framework/scripts/cognition_lib/: config_manager.py  context_manager.py  io_manager.py
src/logos_framework/web/: index.html  logs.css  logs.html  logs.js  script.js  style.css
src/logos_msgs/: CMakeLists.txt  package.xml
src/logos_msgs/action/: Speak.action
src/logos_msgs/msg/: ArmPose.msg  AudioWave.msg  EyeColor.msg  EyeGazeX.msg  EyeGazeY.msg  EyeLidAngle.msg  EyeLidHeight.msg  EyeScaleX.msg  EyeScaleY.msg  MouthSine.msg  SpeechData.msg
systemd/: logos-stt.service
tools/: annotate_arm_beats.py  arm_animation_schema.py  arm_beats_log.jsonl  codex_logos_exec.py  convert_face_animations.py  cycle_gemini_phrases.py  emoji_generation_manifest.json  face_animation_prompt.md  face_animation_schema.py  generate_face_animations.py  generation_log.jsonl  logos_mcp_server.py  nemotron_mic_benchmark.py  rebuild_performance_fuzzy_index.py  validate_animation.py
voices/: 10
(+1726 files in other folders)
